# FacetAnalyser

./: .dockerignore  .gitattributes  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  FacetAnalyser.cxx  FacetAnalyser.h  FacetAnalyser.xml  FacetAnalyserExample.cxx  LICENSE  README.md  TestFacetAnalyser.cxx  pvsm2webgl.py  pvsm2x3d.py  run.sh  todo  vtkGaussianSplatterExtended.cxx  vtkGaussianSplatterExtended.h
code/: CMakeLists.txt  FacetAnalyser.cxx  FacetAnalyser.h  FacetAnalyser.xml  FacetAnalyserCLI.cxx  FacetAnalyserTest.cxx  todo  vtkGaussianSplatterExtended.h
code/scripts/: pvsm2x3d.py
demos/: 8faced-rhombic-dodecahedron_twinned_010_deformed_wss.stl  8faced-rhombic-dodecahedron_twinned_010_deformed_wss.vtp  8faced-rhombic-dodecahedron_twinned_010_deformed_wss_FA-edges.vtp  8faced-rhombic-dodecahedron_twinned_010_deformed_wss_FA-hull.vtp  8faced-rhombic-dodecahedron_twinned_010_deformed_wss_FA.vtp  8faced-rhombic-dodecahedron_twinned_010_deformed_wss_FA0-edges.vtp  8faced-rhombic-dodecahedron_twinned_010_deformed_wss_FA0-hull.vtp  8faced-rhombic-dodecahedron_twinned_010_deformed_wss_FA0.vtp  8faced-rhombic-dodecahedron_twinned_simp+def.pvsm  8faced-rhombic-dodecahedron_twinned_simp+def.webgl  8faced-rhombic-dodecahedron_twinned_simp+def_3de7beb77ca6b5d0b60d1c47d2b59108_0  8faced-rhombic-dodecahedron_twinned_simp+def_CLIres.pvsm  8faced-rhombic-dodecahedron_twinned_simp+def_bf8eaa9788047f0a5770de596c2745cb_0.base64  8faced-rhombic-dodecahedron_twinned_simp+def_d14ec88e3890e00fd774d41d2a162408_0.base64  8faced-rhombic-dodecahedron_twinned_simp+def_fd1712e2f045aef67eca643b248b78ed_0  8faced-rhombic-dodecahedron_twinned_simplified.vtp  notes  rhombic-dodecahedron_040.vtp
demos/WebGL/: 8faced-rhombic-dodecahedron_twinned_simp+def_3633123ce3c8d4adbd5ab7f1f8e8bd5f_0  8faced-rhombic-dodecahedron_twinned_simp+def_d14ec88e3890e00fd774d41d2a162408_0  8faced-rhombic-dodecahedron_twinned_simp+def_dd5bd8d0b88006369b4155f248fedac1_0.base64  8faced-rhombic-dodecahedron_twinned_simp+def_fd1712e2f045aef67eca643b248b78ed_0.base64
demos/X3D/: 8faced-rhombic-dodecahedron_twinned_simp+def.xhtml
docs/demos/SVGs/: Makefile
docs/demos/WebGL/: 8faced-rhombic-dodecahedron_twinned_simp+def.html  8faced-rhombic-dodecahedron_twinned_simp+def_3633123ce3c8d4adbd5ab7f1f8e8bd5f_0.base64  8faced-rhombic-dodecahedron_twinned_simp+def_3de7beb77ca6b5d0b60d1c47d2b59108_0.base64  8faced-rhombic-dodecahedron_twinned_simp+def_bf8eaa9788047f0a5770de596c2745cb_0  8faced-rhombic-dodecahedron_twinned_simp+def_dd5bd8d0b88006369b4155f248fedac1_0
docs/demos/X3D/: 8faced-rhombic-dodecahedron_twinned_simp+def.x3d  Makefile  X3dToX3dom.xslt
testing/: 8faced-rhombic-dodecahedron_twinned_simplified.vtk  particle_0195.blend  particle_0195.vtp  particle_0195_01.pvsm  particle_0195_02.pvsm  particle_0195_03.pvsm  particle_0195_04.pvsm  particle_0195_05.pvsm  particle_0195_06.pvsm  particle_0195_07.pvsm  x-color-map_01.xml
