# This exercise demonstrates a filter plugin.
cmake_minimum_required(VERSION 2.6)
  
FIND_PACKAGE(ParaView REQUIRED)
INCLUDE(${PARAVIEW_USE_FILE})

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${USE_ITK_FILE})

INCLUDE_DIRECTORIES(${ITK_INCLUDE_DIRS})
LINK_DIRECTORIES(${ITK_LIBRARY_DIRS})

#TARGET_LINK_LIBRARIES (FacetAnalyser
#  ITKCommon ITKIO ITKAlgorithms
#)

SET (PARAVIEW_ADDITIONAL_LIBRARIES
   ${PARAVIEW_ADDITIONAL_LIBRARIES}
   ${ITK_LIBRARIES}
)

# Use the PLUGIN macro to create a plugin.
ADD_PARAVIEW_PLUGIN(FacetAnalyser "1.0"
   SERVER_MANAGER_SOURCES FacetAnalyser.cxx
   SERVER_MANAGER_XML FacetAnalyser.xml)

TARGET_LINK_LIBRARIES(FacetAnalyser ${ITK_LIBRARIES})
